# vix-ai-core

./: .gitignore  CMakeLists.txt  README.md
include/vix/ai/core/: Device.hpp  Engine.hpp  Tensor.hpp  Version.hpp
src/: Device.cpp  Engine.cpp  Tensor.cpp  Version.cpp
tests/: CMakeLists.txt  device_tests.cpp  engine_tests.cpp  smoke.cpp  tensor_tests.cpp
